--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "axios": "^1.7.7",
     "next": "14.2.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
     "@repo/tailwind-config": "*",
+    "@repo/typescript-config": "*",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
