--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "@prisma/extension-accelerate": "^1.1.0",
+    "dotenv": "^16.4.5",
     "prisma": "^5.19.1"
   },
   "exports": {
     "./client": "./src/index.ts"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
